# schemaorg-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
scripts/: build-wasm.sh
src/: error.rs  graph.rs  lib.rs  types.rs  wasm.rs
src/extraction/: jsonld.rs  microdata.rs  mod.rs  rdfa.rs
src/profiles/: baseline.rs  engine.rs  mod.rs
src/profiles/google/: article.rs  breadcrumb.rs  common.rs  event.rs  faqpage.rs  local_business.rs  mod.rs  product.rs  recipe.rs
src/validation/: diagnostics.rs  mod.rs  property_checker.rs  type_checker.rs  value_checker.rs
src/vocabulary/: mod.rs  types.rs
tests/: codegen_tests.rs  extraction_unified.rs  profile_integration.rs  profile_tests.rs  validation_tests.rs
wasm/: README.md  index.d.ts  index.js  package.json  test.mjs
